--- a/style.css
+++ b/style.css
@@ -2,8 +2,10 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
   font-family: "Inter", sans-serif;
 }
+/* navbar section */
 nav {
   width: 100%;
   background-color: #FFFFFF;
@@ -35,7 +37,8 @@ nav {
 .list-item li a{
 text-decoration: none;
  color: #000000;
- font-size: medium;
+ font-size: 16px;
+ font-weight: 500;
 }
 .btn {
   width: 164px;
@@ -50,4 +53,64 @@ text-decoration: none;
 }
 .btn:hover {
   background-color: #FF4D4D;
+}
+/* hero section */
+.hero-section {
+  width: 100%;
+  height: 674px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: url("./assets/hero-bg.png");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.inner-hero {
+  width: 80%;
+  height: 379px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.inner-hero-first {
+  display: flex;
+  justify-items: center;
+  align-items: center ;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 8px 12px;
+  border-radius: 1000px;
+  background-color: #FBFBFB;
+  color: #30B868;
+}
+.heading-1 {
+  font-size: 72px;
+  font-weight: bold;
+  color: #FFFFFF
+}
+.heading-2 {
+    font-size: 72px;
+  font-weight: bold;
+  color: #30B868
+}
+ .para {
+  font-size: 18px;
+  font-weight: normal;
+  color: #FFFFFF;
+}
+.btn-1 {
+  
+  padding: 12px 16px;
+  
+  width: 251px;
+  height: 52px;
+}
+.inner-hero-second {
+  background-color: #30B868;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
